--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -6,23 +6,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121184649" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251121184649" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121191416" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121191416" />
 </head>
 <body id="top">
   <div id="header"></div>
 
-  <main id="main" role="main">
-    <header class="page-header container">
+  <main id="main" class="site-main container">
+    <header class="page-header">
       <h1>Publications</h1>
-      <p class="page-intro">Publications, writings and articles by Jennifer Bowman.</p>
+      <p class="page-lead">
+        Formal work published under my name — books, video series, and selected articles.
+        These projects shape how I think about L8 and real-world network design.
+      </p>
     </header>
 
+    <section aria-labelledby="book">
+      <h2 id="book">Books</h2>
+
+      <article class="pub-item book">
+        <div class="pub-media">
+          <img
+            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251121191416"
+            alt="Cover of the Cisco Press book 'Designing Real-World Multi-Domain Networks' by Dhru Mil Prajapati, Jennifer Bowman, and Navin Suvarna"
+            class="book-cover"
+          />
+        </div>
+
+        <div class="pub-content">
+          <h3>Designing Real-World Multi-Domain Networks</h3>
+          <p class="pub-meta">Cisco Press &mdash; 2024</p>
+          <p>
+            A practical guide to designing intent-driven architectures that span multiple
+            domains, teams, and technologies. Grounded in real enterprise complexity, not
+            lab diagrams.
+          </p>
+
+          <p>
+            <a href="https://www.ciscopress.com/store/designing-real-world-multi-domain-networks-9780138037215" target="_blank" rel="noopener">
+              View on Cisco Press (external)
+            </a>
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <section aria-labelledby="video-series">
+      <h2 id="video-series">Video Series</h2>
+
+      <article class="pub-item">
+        <h3>AI-Driven Multidomain Networks</h3>
+        <p class="pub-meta">
+          Video series &mdash; coming soon
+        </p>
+        <p>
+          A series on how AI and automation change the way we approach multi-domain
+          networking. For now, this is a placeholder until formal release details
+          are confirmed and sharable.
+        </p>
+        <p>
+          <em>More details will be added here once I’m able to share them publicly.</em>
+        </p>
+      </article>
+    </section>
+
+    <section aria-labelledby="articles">
+      <h2 id="articles">Articles &amp; White Papers</h2>
+      <p>
+        Selected articles, white papers, or essays that connect L8 thinking with
+        specific technologies, architectures, or industry trends.
+      </p>
+      <ul class="pub-list">
+        <li>Article or white paper title #1 (coming soon)</li>
+        <li>Article or white paper title #2 (coming soon)</li>
+        <!-- Replace with real items as they go live -->
+      </ul>
+    </section>
+
+    <section aria-labelledby="how-pubs-connect">
+      <h2 id="how-pubs-connect">How These Publications Connect to L8</h2>
+      <p>
+        If the L8 site feels like the living, breathing part of my work, these publications
+        are the “snapshots in time” that capture what I knew and believed at a given
+        moment. The blog, podcast, and toolkit continue the story between editions.
+      </p>
+    </section>
   </main>
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251121184649" defer></script>
-  <script src="/assets/js/loader.js?v=20251121184649" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121191416" defer></script>
+  <script src="/assets/js/loader.js?v=20251121191416" defer></script>
 </body>
 </html>
