--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -6,39 +6,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resources — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121184649" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251121184649" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121191416" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121191416" />
 </head>
 <body id="top">
   <div id="header"></div>
 
-  <main id="main" role="main">
-    <header class="page-header container">
+  <main id="main" class="site-main container">
+    <header class="page-header">
       <h1>Resources</h1>
-      <p class="page-intro">Frameworks, guides, and tools for elegant systems.</p>
+      <p class="page-lead">
+        Support for the humans doing this work: women in engineering, mentoring, and
+        health &amp; resilience. This is the part of L8 that lives at the human layer.
+      </p>
     </header>
 
-    <section class="container flow">
-      <ul class="resource-list">
-        <li>
-          <h3><a href="/assets/docs/l8-architecture-guide.pdf">Layer&nbsp;8 Architecture Guide</a></h3>
-          <p>Patterns and principles for building calm, scalable, human‑centered networks.</p>
-        </li>
-        <li>
-          <h3><a href="https://www.cisco.com/c/en/us/solutions/index.html" target="_blank" rel="noopener">Cisco Solutions Portfolio</a></h3>
-          <p>Reference designs and validated architectures across enterprise and service provider environments.</p>
-        </li>
-        <li>
-          <h3><a href="/assets/docs/l8-toolkit-v1.pdf">L8 Toolkit</a></h3>
-          <p>A curated set of templates, diagrams, and checklists that accelerate design and collaboration at the human layer.</p>
-        </li>
+    <section aria-labelledby="women-in-eng">
+      <h2 id="women-in-eng">Women in Engineering</h2>
+      <p>
+        Systems are complex. Careers can be even more so. This space is for women in
+        engineering and those who support them — navigating impact, visibility, and
+        sustainability in technical roles.
+      </p>
+      <p>
+        I’ll be sharing stories, frameworks, and practical tools for staying both technical
+        and human over the long haul.
+      </p>
+      <p>
+        <a href="/pages/resources/women-in-engineering/">
+          Explore Women in Engineering &rarr;
+        </a>
+      </p>
+    </section>
+
+    <section aria-labelledby="mentoring">
+      <h2 id="mentoring">Mentoring</h2>
+      <p>
+        Mentoring isn’t about having all the answers. It’s about sitting beside someone
+        while they untangle their own complexity. My approach blends architecture thinking,
+        narrative, and practical next steps.
+      </p>
+      <ul>
+        <li>How I think about mentoring technical leaders</li>
+        <li>Questions I ask more than I answer</li>
+        <li>What you can expect from working with me</li>
       </ul>
+      <p>
+        <a href="/pages/resources/mentoring/">
+          Learn more about Mentoring &rarr;
+        </a>
+      </p>
+    </section>
+
+    <section aria-labelledby="health-resilience">
+      <h2 id="health-resilience">Health &amp; Resilience</h2>
+      <p>
+        I had a stroke. It reshaped how I think about time, impact, and what “high
+        performance” really means. This isn’t medical advice — it’s one person’s story and
+        some hard-earned perspective.
+      </p>
+      <p>
+        I’ll also point to official resources that can literally save lives when every
+        minute matters.
+      </p>
+      <p>
+        <a href="/pages/resources/health-and-resilience/">
+          Read about Health &amp; Resilience &rarr;
+        </a>
+      </p>
+    </section>
+
+    <section aria-labelledby="connecting-dots">
+      <h2 id="connecting-dots">Connecting the Dots</h2>
+      <p>
+        These themes show up across the site — in the blog, podcast, and toolkit. As new
+        posts and episodes go live, I’ll link to them from here so you can move easily
+        between the “human layer” and the technical work.
+      </p>
     </section>
   </main>
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251121184649" defer></script>
-  <script src="/assets/js/loader.js?v=20251121184649" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121191416" defer></script>
+  <script src="/assets/js/loader.js?v=20251121191416" defer></script>
 </body>
 </html>
