--- a/pages/toolkit/index.html
+++ b/pages/toolkit/index.html
@@ -6,23 +6,105 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Toolkit — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121184649" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251121184649" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121191416" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121191416" />
 </head>
 <body id="top">
   <div id="header"></div>
 
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1>Toolkit</h1>
-      <p class="page-intro">Useful tools and resources for building elegant systems.</p>
+    <main id="main" class="site-main container">
+    <header class="page-header">
+        <h1>Toolkit</h1>
+        <p class="page-lead">
+        Practical tools, guides, and references to help you calm complexity in real networks.
+        Use these in your own architecture work, workshops, and design sessions.
+        </p>
     </header>
 
-  </main>
+    <section aria-labelledby="l8-toolkit">
+        <h2 id="l8-toolkit">L8 Toolkit</h2>
+        <p>
+        The L8 Toolkit is a growing collection of diagrams, worksheets, and prompts built
+        around the “Butterfly Layer” mental model. It’s designed to help you shift from
+        box-by-box thinking to intent-led, multi-domain design.
+        </p>
+        <ul>
+        <li>L8 overview one-pager (coming soon)</li>
+        <li>Intent mapping worksheet (coming soon)</li>
+        <li>Architecture butterfly canvas (coming soon)</li>
+        </ul>
+    </section>
+
+    <section aria-labelledby="architecture-guides">
+        <h2 id="architecture-guides">Architecture Guides &amp; Reference</h2>
+        <p>
+        Reference material you can keep open while you’re designing or reviewing real-world
+        networks.
+        </p>
+        <ul>
+        <li>
+            <a href="/assets/docs/l8-architecture-guide.pdf?v=20251121191416">
+            L8 Architecture Guide (PDF)
+            </a>
+            <span class="meta">— high-level structure for multi-domain design</span>
+        </li>
+        <li>
+            <a href="/assets/docs/l8-design-checklist.pdf?v=20251121191416">
+            Design Review Checklist (PDF)
+            </a>
+            <span class="meta">— prompts for architecture reviews and workshops</span>
+        </li>
+        <!-- Add more items or replace with your existing resources content -->
+        </ul>
+    </section>
+
+    <section aria-labelledby="worksheets">
+        <h2 id="worksheets">Worksheets &amp; Checklists</h2>
+        <p>
+        Printable or digital sheets you can use during workshops, mentoring sessions, or
+        solo design work.
+        </p>
+        <ul>
+        <li>Discovery questions for intent-led design (coming soon)</li>
+        <li>Stakeholder mapping worksheet (coming soon)</li>
+        <li>“From symptoms to signals” checklist (coming soon)</li>
+        </ul>
+    </section>
+
+    <section aria-labelledby="industry-links">
+        <h2 id="industry-links">Cisco &amp; Industry Links</h2>
+        <p>
+        Curated links that align with the way L8 approaches real-world architecture.
+        These are external resources; the goal is to help you get to the right places faster.
+        </p>
+        <ul>
+        <li>
+            <a href="https://www.cisco.com" target="_blank" rel="noopener">
+            Cisco official documentation (external)
+            </a>
+        </li>
+        <li>
+            <a href="https://developer.cisco.com" target="_blank" rel="noopener">
+            Cisco DevNet (external)
+            </a>
+        </li>
+        <!-- Replace/add links that match your existing resource list -->
+        </ul>
+    </section>
+
+    <section aria-labelledby="how-to-use">
+        <h2 id="how-to-use">How to Use this Toolkit</h2>
+        <p>
+        Start with the guides, then layer in worksheets for specific projects. You don’t
+        have to use everything at once. Pick the pieces that lighten the load for you and
+        your teams, and ignore the rest.
+        </p>
+    </section>
+    </main>
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251121184649" defer></script>
-  <script src="/assets/js/loader.js?v=20251121184649" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121191416" defer></script>
+  <script src="/assets/js/loader.js?v=20251121191416" defer></script>
 </body>
 </html>
