Blog format updated.

--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121191416" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251121191416" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121195807" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121195807" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -27,7 +27,7 @@
       <article class="pub-item book">
         <div class="pub-media">
           <img
-            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251121191416"
+            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251121195807"
             alt="Cover of the Cisco Press book 'Designing Real-World Multi-Domain Networks' by Dhru Mil Prajapati, Jennifer Bowman, and Navin Suvarna"
             class="book-cover"
           />
@@ -73,14 +73,42 @@
     <section aria-labelledby="articles">
       <h2 id="articles">Articles &amp; White Papers</h2>
       <p>
-        Selected articles, white papers, or essays that connect L8 thinking with
-        specific technologies, architectures, or industry trends.
+        Selected pieces that connect L8 thinking with specific technologies, architectures,
+        or industry trends.
       </p>
-      <ul class="pub-list">
-        <li>Article or white paper title #1 (coming soon)</li>
-        <li>Article or white paper title #2 (coming soon)</li>
-        <!-- Replace with real items as they go live -->
-      </ul>
+
+      <div class="pub-list">
+        <article class="pub-item card">
+          <div class="pub-content">
+            <h3>Title of Article or White Paper #1</h3>
+            <p class="pub-meta">Cisco / Technical Blog &mdash; 2025</p>
+            <p>
+              One-sentence positioning for this piece. What problem does it speak to,
+              and who is it for?
+            </p>
+            <p>
+              <a href="https://example.com/article-1" target="_blank" rel="noopener">
+                Read the article &rarr;
+              </a>
+            </p>
+          </div>
+        </article>
+
+        <article class="pub-item card">
+          <div class="pub-content">
+            <h3>Title of Article or White Paper #2</h3>
+            <p class="pub-meta">Industry Publication &mdash; 2024</p>
+            <p>
+              Another short summary; keep it under two lines so the list stays scannable.
+            </p>
+            <p>
+              <a href="https://example.com/article-2" target="_blank" rel="noopener">
+                Read the article &rarr;
+              </a>
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <section aria-labelledby="how-pubs-connect">
@@ -95,7 +123,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251121191416" defer></script>
-  <script src="/assets/js/loader.js?v=20251121191416" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121195807" defer></script>
+  <script src="/assets/js/loader.js?v=20251121195807" defer></script>
 </body>
 </html>
