Using hidden to prep for launch

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — The Butterfly Layer</title>
   <meta name="description" content="Contact L8 — The Butterfly Layer. Advisory, speaking, and collaborations at the human layer of the network.">
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251122010754" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251122010754" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123221904" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123221904" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -24,15 +24,16 @@
 
       <h2>Social</h2>
       <ul>
-        <li><a href="https://www.linkedin.com/in/butterflylayer/">LinkedIn</a></li>
-        <li><a href="https://www.youtube.com/" rel="noopener">YouTube</a></li>
+        <li><a href="https://www.linkedin.com/in/butterflylayer/" rel="noopener">LinkedIn</a></li>
+        <li class="hidden"><a href="https://www.youtube.com/" rel="noopener">YouTube</a></li>
+        <li><a href="https://x.com/butterflylayer" target="_blank" rel="noopener">Twitter</a></li>
       </ul>
     </section>
   </main>
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js?v=20251122010754" defer></script>
-  <script src="/assets/js/quotes.js?v=20251122010754" defer></script>
+  <script src="/assets/js/loader.js?v=20251123221904" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123221904" defer></script>
 </body>
 </html>
