--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251122010754" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251122010754" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123221904" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123221904" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -27,7 +27,7 @@
       <article class="pub-item book">
         <div class="pub-media">
           <img
-            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251122010754"
+            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251123221904"
             alt="Cover of the Cisco Press book 'Designing Real-World Multi-Domain Networks' by Dhru Mil Prajapati, Jennifer Bowman, and Navin Suvarna"
             class="book-cover"
           />
@@ -70,7 +70,7 @@
       </article>
     </section>
 
-    <section aria-labelledby="articles">
+    <section aria-labelledby="articles" class="hidden">
       <h2 id="articles">Articles &amp; White Papers</h2>
       <p>
         Selected pieces that connect L8 thinking with specific technologies, architectures,
@@ -123,7 +123,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251122010754" defer></script>
-  <script src="/assets/js/loader.js?v=20251122010754" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123221904" defer></script>
+  <script src="/assets/js/loader.js?v=20251123221904" defer></script>
 </body>
 </html>
