--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resources — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251122010754" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251122010754" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123221904" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123221904" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -33,7 +33,7 @@
         and human over the long haul.
       </p>
       <p>
-        <a href="/pages/resources/women-in-engineering/">
+        <a href="/pages/resources/women-in-engineering/" class="hidden">
           Explore Women in Engineering &rarr;
         </a>
       </p>
@@ -52,7 +52,7 @@
         <li>What you can expect from working with me</li>
       </ul>
       <p>
-        <a href="/pages/resources/mentoring/">
+        <a href="/pages/resources/mentoring/" class="hidden">
           Learn more about Mentoring &rarr;
         </a>
       </p>
@@ -70,7 +70,7 @@
         minute matters.
       </p>
       <p>
-        <a href="/pages/resources/health-and-resilience/">
+        <a href="/pages/resources/health-and-resilience/" class="hidden">
           Read about Health &amp; Resilience &rarr;
         </a>
       </p>
@@ -88,7 +88,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251122010754" defer></script>
-  <script src="/assets/js/loader.js?v=20251122010754" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123221904" defer></script>
+  <script src="/assets/js/loader.js?v=20251123221904" defer></script>
 </body>
 </html>
