--- a/pages/toolkit/index.html
+++ b/pages/toolkit/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Toolkit — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251122010754" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251122010754" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123221904" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123221904" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -42,19 +42,7 @@
         networks.
         </p>
         <ul>
-        <li>
-            <a href="/assets/docs/l8-architecture-guide.pdf?v=20251122010754">
-            L8 Architecture Guide (PDF)
-            </a>
-            <span class="meta">— high-level structure for multi-domain design</span>
-        </li>
-        <li>
-            <a href="/assets/docs/l8-design-checklist.pdf?v=20251122010754">
-            Design Review Checklist (PDF)
-            </a>
-            <span class="meta">— prompts for architecture reviews and workshops</span>
-        </li>
-        <!-- Add more items or replace with your existing resources content -->
+            <li>Coming soon! Under development.</li>
         </ul>
     </section>
 
@@ -104,7 +92,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251122010754" defer></script>
-  <script src="/assets/js/loader.js?v=20251122010754" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123221904" defer></script>
+  <script src="/assets/js/loader.js?v=20251123221904" defer></script>
 </body>
 </html>
