--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Butterfly Layer — L8</title>
   <meta name="description" content="L8 — The Butterfly Layer. The human layer above the stack: where intent, architecture, and elegance shape networks of the future.">
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123222840" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251123222840" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123231839" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123231839" />
+  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
 </head>
 <body id="top">
   <div id="header"></div>
@@ -28,13 +34,14 @@
           </div>
         </div>
 
-        <div class="hero-visual" aria-hidden="true">
+<!--        <div class="hero-visual" aria-hidden="true">
           <img
-            src="/assets/images/hero-butterfly.svg?v=20251123222840"
+            src="/assets/img/ui/hero-butterfly-wow.svg?v=20251123231839"
             alt=""
             class="hero-butterfly"
           />
         </div>
+      -->
       </div>
     </section>
 
@@ -153,8 +160,8 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js?v=20251123222840" defer></script>
-  <script src="/assets/js/quotes.js?v=20251123222840" defer></script>
-  <script src="/assets/js/blog-teaser.js?v=20251123222840" defer></script>
+  <script src="/assets/js/loader.js?v=20251123231839" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123231839" defer></script>
+  <script src="/assets/js/blog-teaser.js?v=20251123231839" defer></script>
 </body>
 </html>
