--- a/pages/_template.html
+++ b/pages/_template.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><!-- Replace with Page Title --></title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123222840" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251123222840" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123231839" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123231839" />
   <!-- Add page-specific CSS only when needed (e.g., podcast.css) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body id="top">
   <div id="header"></div>
@@ -27,8 +29,8 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251123222840" defer></script>
-  <script src="/assets/js/loader.js?v=20251123222840" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123231839" defer></script>
+  <script src="/assets/js/loader.js?v=20251123231839" defer></script>
   <!-- Page-specific JS below if needed -->
 </body>
 </html>
