--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -6,8 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — The Butterfly Layer</title>
   <meta name="description" content="Contact L8 — The Butterfly Layer. Advisory, speaking, and collaborations at the human layer of the network.">
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123231839" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251123231839" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251123233107" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251123233107" />
+  <!-- Favicon + Icons -->
+  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+
+  <!-- Social / OpenGraph defaults -->
+  <meta property="og:title" content="The Butterfly Layer — L8">
+  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
+  <meta property="og:image" content="/assets/img/social/default-share.png">
+  <meta name="twitter:image" content="/assets/img/social/default-share.png">
 </head>
 <body id="top">
   <div id="header"></div>
@@ -33,7 +47,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js?v=20251123231839" defer></script>
-  <script src="/assets/js/quotes.js?v=20251123231839" defer></script>
+  <script src="/assets/js/loader.js?v=20251123233107" defer></script>
+  <script src="/assets/js/quotes.js?v=20251123233107" defer></script>
 </body>
 </html>
