Extended construction.json to support cascade.

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resources — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124005950" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124005950" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124152230" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251124152230" />
   <!-- Favicon + Icons -->
   <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
@@ -47,7 +47,7 @@
         and human over the long haul.
       </p>
       <p>
-        <a href="/pages/resources/women-in-engineering/" class="hidden">
+        <a href="/pages/resources/women-in-engineering/">
           Explore Women in Engineering &rarr;
         </a>
       </p>
@@ -66,7 +66,7 @@
         <li>What you can expect from working with me</li>
       </ul>
       <p>
-        <a href="/pages/resources/mentoring/" class="hidden">
+        <a href="/pages/resources/mentoring/">
           Learn more about Mentoring &rarr;
         </a>
       </p>
@@ -84,8 +84,8 @@
         minute matters.
       </p>
       <p>
-        <a href="/pages/resources/health-and-resilience/" class="hidden">
-          Read about Health &amp; Resilience &rarr;
+        <a href="/pages/resources/health-resilience/">
+          Read about Health and Resilience &rarr;
         </a>
       </p>
     </section>
@@ -102,7 +102,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251124005950" defer></script>
-  <script src="/assets/js/loader.js?v=20251124005950" defer></script>
+  <script src="/assets/js/quotes.js?v=20251124152230" defer></script>
+  <script src="/assets/js/loader.js?v=20251124152230" defer></script>
 </body>
 </html>
