--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resources — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124152230" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124152230" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162403" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162403" />
   <!-- Favicon + Icons -->
   <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
@@ -17,11 +17,25 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="L8: The Butterfly Layer">
+  <meta property="og:description" content="Architecture, AI, and the Human Intent Layer — created by Jennifer Bowman.">
+  <meta property="og:image" content="/assets/img/social/og-default.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://butterflylayer.com/">
+  <meta property="og:site_name" content="L8: The Butterfly Layer">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="L8: The Butterfly Layer">
+  <meta name="twitter:description" content="Architecture, AI, and the Human Intent Layer.">
+  <meta name="twitter:image" content="/assets/img/social/og-default.png">
+
+  <!-- Primary Meta -->
+  <meta name="title" content="L8: The Butterfly Layer">
+  <meta name="description" content="Exploring architecture, AI, and the human intent layer — by Jennifer Bowman.">
 </head>
 <body id="top">
   <div id="header"></div>
@@ -102,7 +116,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251124152230" defer></script>
-  <script src="/assets/js/loader.js?v=20251124152230" defer></script>
+  <script src="/assets/js/quotes.js?v=20251124162403" defer></script>
+  <script src="/assets/js/loader.js?v=20251124162403" defer></script>
 </body>
 </html>
