--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="description" content="L8 — The Butterfly Layer. The human layer above the stack: where intent, architecture, and elegance shape networks of the future.">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162403" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162403" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
 
   <!-- Favicon + Icons -->
   <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
@@ -21,11 +21,25 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="L8: The Butterfly Layer">
+  <meta property="og:description" content="Architecture, AI, and the Human Intent Layer — created by Jennifer Bowman.">
+  <meta property="og:image" content="/assets/img/social/og-default.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://butterflylayer.com/">
+  <meta property="og:site_name" content="L8: The Butterfly Layer">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="L8: The Butterfly Layer">
+  <meta name="twitter:description" content="Architecture, AI, and the Human Intent Layer.">
+  <meta name="twitter:image" content="/assets/img/social/og-default.png">
+
+  <!-- Primary Meta -->
+  <meta name="title" content="L8: The Butterfly Layer">
+  <meta name="description" content="Exploring architecture, AI, and the human intent layer — by Jennifer Bowman.">
 </head>
 <body id="top">
   <div id="construction-banner-slot"></div>
@@ -49,7 +63,7 @@
 
 <!--        <div class="hero-visual" aria-hidden="true">
           <img
-            src="/assets/img/ui/hero-butterfly-wow.svg?v=20251124162403"
+            src="/assets/img/ui/hero-butterfly-wow.svg?v=20251124162559"
             alt=""
             class="hero-butterfly"
           />
@@ -173,8 +187,8 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js?v=20251124162403" defer></script>
-  <script src="/assets/js/quotes.js?v=20251124162403" defer></script>
-  <script src="/assets/js/blog-teaser.js?v=20251124162403" defer></script>
+  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
+  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
+  <script src="/assets/js/blog-teaser.js?v=20251124162559" defer></script>
 </body>
 </html>
